objects/ssot__AssetOperation__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssetCategory__c</fullName>
        <label>Asset Category</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetId__c</fullName>
        <label>Asset</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssetOperation_AssetId_map_Asset_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssetOperation_AssetId_map_Asset_Id_N_1</label>
        <referenceTo>ssot__Asset__dlm</referenceTo>
        <relationshipLabel>AssetOperation_AssetId_map_Asset_Id_N_1</relationshipLabel>
        <relationshipName>AssetOperation_AssetId_map_Asset_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__AssetUniqueId__c</fullName>
        <label>Asset Unique Identifier</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Asset Operation Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IdleDurationQuantity__c</fullName>
        <label>Idle Duration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__IdleDurationUnitofMeasure__c</fullName>
        <label>Idle Duration Unit of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OperatorId__c</fullName>
        <label>Operator Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PauseDurationQuantity__c</fullName>
        <label>Pause Duration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PauseDurationUnitofMeasure__c</fullName>
        <label>Pause Duration Unit of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RunDurationQuantity__c</fullName>
        <label>Run Duration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RunDurationUnitofMeasure__c</fullName>
        <label>Run Duration Unit of Measure</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShiftEndTime__c</fullName>
        <label>Shift End Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ShiftId__c</fullName>
        <label>Shift Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShiftStartTime__c</fullName>
        <label>Shift Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__TelematicsProviderId__c</fullName>
        <label>Telematics Provider</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009168902_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssetOperation_IdleDurationUnitofMea_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>AssetOperation_IdleDurationUnitofMea_rel</relationshipLabel>
        <relationshipName>rel_1702009168902_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009169227_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssetOperation_PauseDurationUnitofMe_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>AssetOperation_PauseDurationUnitofMe_rel</relationshipLabel>
        <relationshipName>rel_1702009169227_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009169517_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AssetOperation_RunDurationUnitofMeas_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>AssetOperation_RunDurationUnitofMeas_rel</relationshipLabel>
        <relationshipName>rel_1702009169517_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>